# ChangeLog for dev-python/quixote
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/quixote/ChangeLog,v 1.25 2009/09/04 17:50:56 patrick Exp $

  04 Sep 2009; Patrick Lauer <patrick@gentoo.org> -quixote-1.0.ebuild,
  -quixote-1.2.ebuild, -quixote-2.4.ebuild, -quixote-2.5.ebuild:
  Remove old

*quixote-2.6 (15 Feb 2009)

  15 Feb 2009; Patrick Lauer <patrick@gentoo.org> +quixote-2.6.ebuild:
  Bump to 2.6

*quixote-2.5 (23 Feb 2008)
*quixote-1.2 (23 Feb 2008)

  23 Feb 2008; Benedikt Böhm <hollow@gentoo.org> metadata.xml,
  quixote-0.6.1.ebuild, quixote-1.0.ebuild, +quixote-1.2.ebuild,
  quixote-2.4.ebuild, +quixote-2.5.ebuild:
  version bumps, bug #169030 and #206507

  17 Jan 2008; Fabian Groffen <grobian@gentoo.org> quixote-1.0.ebuild,
  quixote-2.4.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  08 Nov 2007; Grant Goodyear <g2boojum@gentoo.org> metadata.xml:
  Removed myself as maintainer.

  05 Jul 2007; Ali Polatel <hawking@gentoo.org> quixote-2.4.ebuild:
  moved DOCS to src_install. Removed default doc names from DOCS

  05 Jul 2007; Ali Polatel <hawking@gentoo.org> quixote-0.6.1.ebuild,
  quixote-1.0.ebuild:
  use DOCS, mydoc is deprecated. Removed default doc names from DOCS

  27 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> quixote-2.4.ebuild:
  Add ~amd64 wrt bug #167397.

  21 Feb 2007; Lukasz Strzygowski <lucass@gentoo.org>
  files/digest-quixote-0.6.1, files/digest-quixote-1.0, Manifest:
  Convert to Manifest2.

  01 Apr 2006; Aron Griffis <agriffis@gentoo.org> quixote-2.4.ebuild:
  Mark 2.4 ~ia64

*quixote-2.4 (04 Feb 2006)

  04 Feb 2006; Lukasz Strzygowski <lucass@gentoo.org> +quixote-2.4.ebuild:
  Version bump: new license and some cleanup, bugs #98006 and #91579.

  19 Feb 2005; <gongloo@gentoo.org> quixote-1.0.ebuild:
  Stable on ppc-macos.

  07 Feb 2005; Fernando Serboncini <fserb@gentoo.org> quixote-0.6.1.ebuild,
  quixote-1.0.ebuild: