@@ -1,8 +1,4 @@
-DIST Quixote-2.4.tar.gz 192388 RMD160 628f0f601740d754df645273bb7b73aba1489825 SHA1 539fefbcc2afc46192f6b7950de24d2d59d8b036 SHA256 a44acc9e7ec6610f057b216f2382b0267d419166619d472484b1961cadb04a21
-DIST Quixote-2.5.tar.gz 176192 RMD160 6365e139d0fdb2a4f38ed06a6a5b399825e480e9 SHA1 48bdfb91c26d01f1e7e2aa2a9791fcd67d65104a SHA256 03cedc25f3f5ee85cc3da63c4eb6a694e06e9fc40067797748d3fb4005f99ed1
 DIST Quixote-2.6.tar.gz 197321 RMD160 a9f0fc472dea74f486b3a5c8cb08d3d3b509a0a3 SHA1 f89b727a2cec12648abc08119de6ccc622120df5 SHA256 51e61ca4c0c402337ab3d74816f97f5bc4127b11dd2f9122271f59650c158089
-EBUILD quixote-2.4.ebuild 661 RMD160 a895619350e491f3db166e8c552f20ad86b63d17 SHA1 ae7323aa734760fc709a57bc7f2195e5184fc831 SHA256 78bf9b472ea5b7187c44ea2cc7c55329efb80fd652bac1bb1947102e91bffc5f
-EBUILD quixote-2.5.ebuild 661 RMD160 9364e25de492bb33da565035b65f967dd5cd95da SHA1 38950f409215a7718a07b6ff310bf7490ad7a61f SHA256 edfe7589d06601e28982e9782f2fa1161f1f439deffb11bf1fad799ee1d34982
-EBUILD quixote-2.6.ebuild 662 RMD160 1369d80332e50d67cfe696cec788e91839d92ed4 SHA1 31a76e7018a80ff13104c33b7b855f63aa1422fc SHA256 07e65992bb105617a57c3cdb312506d731c47ce1e46ba4f3e48525b262314316
-MISC ChangeLog 3789 RMD160 6145a7c20c17583d5a8378f784f9cd1a7374924d SHA1 99b60319b83a722e06ca9fdc139fe69b5e2a183f SHA256 2503e356a3989d2e6bad4e613db092e3d3ea324ca141ac650fa64c058a3d64d4
+EBUILD quixote-2.6.ebuild 666 RMD160 0abe6a5358de4686b3c6649491d1591e92770091 SHA1 f32ce52b19ba31cef0c2ff624c005d74206a0946 SHA256 23b57867a6a2c37556ffa8d418396cc588621587c55d9ec443d6fdd73065dbfa
+MISC ChangeLog 3908 RMD160 2b2cd049ca96837af38f011b4ca6f848dd5199db SHA1 05b2fe41dd5a6df672c92718d3ae16be7faf6fdd SHA256 02412993ec1c886bc5760d1f7d708f32084788648b08af26c3c541ccd456749d
 MISC metadata.xml 183 RMD160 941e443c399a375de5f4c4d00dc76dd75d3a26f3 SHA1 152b186082211b59aa104f43e5af23ad7373a4ca SHA256 aa31bee8f91e1695ed9e7fd6b5d7fce119a5211d720ea979ea932f37f6e73775
