@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/quixote/quixote-2.6.ebuild,v 1.1 2009/02/15 15:10:32 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/quixote/quixote-2.6.ebuild,v 1.2 2009/11/26 10:06:21 djc Exp $
 
 inherit distutils
 
@@ -20,7 +20,7 @@ DEPEND=">=dev-lang/python-2.3"
 S="${WORKDIR}"/${MY_P}
 
 src_install() {
-	DOCS="ACKS CHANGES"
+	DOCS="ACKS.txt CHANGES.txt"
 	distutils_src_install
 	dodoc doc/*.txt
 	dohtml doc/*.html
